src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');

* {
  scroll-behavior: smooth;
  cursor: default;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
}

body {
  background-color: white;
}

.noScroll {
  overflow-y: hidden;
}

/*Global Style for all page sections to declare maximum width in every viewport size and center with margin auto and some padding. Used was a wrapper for whole web. Can be avoided by using divs in Layout.astro with bodyWrapper class and leaving desired elements outside of it. This way I can for example have a section with a background in anoterh color or a picture that occuipes the whole screen width.*/
.bodyWrapper {
  width: 100%;
  margin: 0 auto;
  padding: 1rem;
}

/*Padding and general settings for each type of section in page*/

/*Sections are general page content sections*/
.sectionWrapper {
  padding-top: 6rem;
  padding-bottom: 6rem;
}

.footerWrapper {
  min-height: 10vh;
}

.headerWrapper {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

@media screen and (min-width: 640px) {
  .bodyWrapper {
    max-width: 640px;
  }

  .sectionWrapper {
    padding: 6rem 1.25rem;
  }
}

@media screen and (min-width: 768px) {
  .bodyWrapper {
    max-width: 768px;
  }
}

@media screen and (min-width: 1024px) {
  .bodyWrapper {
    max-width: 1024px;
  }
}

@media screen and (min-width: 1536px) {
  .bodyWrapper {
    max-width: 1536px;
  }
}

